<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="de.ktbl.eikotiger.view.viewmodel.settings.SettingsVM" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/fragment_vertical_padding"
        android:paddingVertical="@dimen/fragment_vertical_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/default_padding"
            android:onClick="@{v -> vm.onBusinessInformationClick()}"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:id="@+id/entry_bussiness_info_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_home_black" />

                <TextView
                    style="@style/TitleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/entry_bussiness_info_icon"
                    android:text="@string/business_information" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/settings_business_information_desc" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/default_padding"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:id="@+id/entry_app_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_settings_applications" />

                <TextView
                    style="@style/TitleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/entry_app_icon"
                    android:text="@string/app_settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/settings_app_settings_desc" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/default_padding"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:id="@+id/entry_connection_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_wifi_black" />

                <TextView
                    style="@style/TitleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/entry_connection_icon"
                    android:text="@string/connections_settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/settings_connection_settings_desc" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
