<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="recordingEnv"
            type="de.ktbl.eikotiger.view.viewmodel.recording.manager.RecordingEnvironment" />

        <variable
            name="vm"
            type="de.ktbl.eikotiger.view.viewmodel.recording.setup.RecordingMenuVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/fragment_vertical_padding"
        android:paddingVertical="@dimen/fragment_vertical_padding">

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lines="3"
            android:text='@{@string/animalcategory_branch_fmt(recordingEnv.animalCategoryInstance.customName, recordingEnv.currentStock.branch.name)}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button12"
            style="@style/RecordingSetupOverviewButton"
            android:layout_height="wrap_content"
            android:enabled="@{!vm.isLoading}"
            android:onClick="@{v -> vm.startPerIndicatorRecording()}"
            android:text="@string/per_indicator_recording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <Button
            android:id="@+id/button13"
            style="@style/RecordingSetupOverviewButton"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:enabled="@{!vm.isLoading}"
            android:onClick="@{v -> vm.startPerAnimalRecording()}"
            android:text="@string/per_animal_recording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/button14"
            style="@style/RecordingSetupOverviewButton"
            android:layout_height="wrap_content"
            android:enabled="@{!vm.isLoading}"
            android:text="@string/office_indicators"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView7"
            style="@style/RecordingSetupOverviewDescription"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/desc_per_animal_recording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView25"
            style="@style/RecordingSetupOverviewDescription"
            android:layout_height="wrap_content"
            android:text="@string/desc_per_indicator_recording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

        <TextView
            android:id="@+id/textView26"
            style="@style/RecordingSetupOverviewDescription"
            android:layout_height="wrap_content"
            android:text="@string/desc_office_recording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/perIndicatorProgress" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <ProgressBar
            android:id="@+id/perIndicatorProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{vm.perIndicatorLoading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <ProgressBar
            android:id="@+id/perAnimalProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{vm.perAnimalLoading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progressBar2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
